--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm i",
-    "nodemon": "npx nodemon index.js",
-    "start": "npx start index.js"
+    "nodemon": "nodemon index.js",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
