--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm i",
-    "nodemon": "nodemon index.js",
+    "dev": "nodemon index.js",
     "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mysql": "^2.18.1",
+    "mysql2": "^3.12.0",
     "nodemon": "^3.1.9"
   }
 }
